--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <h1> Galeria fotos de artistas</h1>
 
     <div class="gallery" id="galeria">
-        <img src="galeria/anuelAA.png" alt="anuelAA">
-        <img src="galeria/badbunny.png" alt="Bad bunny">
-        <img src="galeria/camilo.png" alt="Camilo">
-        <img src="galeria/fridaK.png" alt="Frida Khalo">
-        <img src="galeria/maluma.png" alt="Maluma">
-        <img src="galeria/rosalia.png" alt="Rosalia">
+        
+        <img src="galeria/anuelAA.png" alt="anuelAA" id="imagenes">
+        <img src="galeria/badbunny.png" alt="Bad bunny" id="imagenes">
+        <img src="galeria/camilo.png" alt="Camilo" id="imagenes">
+        <img src="galeria/fridaK.png" alt="Frida Khalo" id="imagenes">
+        <img src="galeria/maluma.png" alt="Maluma" id="imagenes">
+        <img src="galeria/rosalia.png" alt="Rosalia" id="imagenes">
+        
     </div>
 
-    <div id="lightbox">
-        <span id="modal"></span>
-    </div>
+   
 </body>
 <script src="script.js"></script>
 </html>
